--- a/Burger/Burgrill.html
+++ b/Burger/Burgrill.html
@@ -5,23 +5,109 @@
             BURGRILL - Quality First.
         </title>
         <link rel="stylesheet" href="pageburgrill.css" >
+        <script src="burgrill.js"></script>
     </head>
     <body>
-        <div class="navig">
-          <img src="Logonline.jpg" height="130px" width="120px" id="logo" >
-                 <a href="#"> ABOUT US </a>  
-                 <a href="#"> BLOG </a>
-                 <a href="#"> GALLERY </a> 
-                 <a href="#"> MENU </a>  
-                 <a href="#"> HOME </a>
-
+      <nav id="navbar">
+        <div id="logo">
+            <img src="Logonline.jpg" >
         </div>
-    <div class="tom">
+        <ul>
+            <li class="item"><a href="#home">HOME</a></li>
+            <li class="item"><a href="burgrill menu copy.jpg">MENU</a></li>
+            <li class="item"><a href="#sect1">GALLERY</a></li>
+            <li class="item"><a href="burgrill social media post.jpg">BLOG</a></li>
+            <li class="item"><a href="#about">ABOUT US</a></li>
+        </ul>
+     </nav>
+   
+      <section id="home">
+      <div class="tom">
             <h1>W E L C O M E</h1>
-            <h3>Discover the new Spice in Burger</h3>
+            <h2 id="animate">Discover the new Spice in Burger</h2>
+            <h5><span> </span></h5>
+      </div>
+      <button class="butt">
+         <b> <a href="#order"> Order Now </a> </b> 
+      </button>
+      </section>
+
+   <section id="services-container">
+    <h3 class="c-service">Our Services</h3>
+    <div id="services">
+        <div class="box">
+            <img src="plate.png" alt="">
+            <h4 class="h-secondary center">Food Catering</h4>
+            <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui, repudiandae similique nam, recusandae quidem ab asperiores ex, aut fugit labore veritatis facere?
+                sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt
+                voluptas beatae facilis labore, omnis sint quae eum.</p>
+        </div>
+        <div class="box">
+            <img src="delivery.png" alt="">
+            <h4 class="h-secondary center">Bulk Ordering</h4>
+            <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
+
+                sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt
+                voluptas beatae facilis labore, omnis sint quae eum.</p>
+        </div>
+        <div class="box">
+            <img src="order.png" alt="">
+            <h4 class="h-secondary center">Food Ordering</h4>
+            <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus provident fugiat aliquam minima at explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas! Quis.
+                sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt
+                voluptas beatae facilis labore, omnis sint quae eum.</p>
+        </div>
     </div>
-   <button id="butt">
-    <b> <a href="#order"> Order Now </a> </b> 
-   </button>
-    </body>
+</section>
+
+<section id="sect1">
+    <h3 class="c-taste">Types of Burger</h3>
+        <div id="clients">
+            <div class="client-item">
+                <img src="f1.png">
+            </div>
+            <div class="client-item">
+                <img src="f2.png">
+            </div>
+            <div class="client-item">
+                <img src="f3.png" >
+            </div>
+            <div class="client-item">
+                <img src="f1.png">
+            </div>
+            <div class="client-item">
+                <img src="f2.png">
+            </div>
+            <div class="client-item">
+                <img src="f3.png">
+            </div>
+        </div>
+</section>
+
+<section id="contact">
+        <h3 class="c-contact ">Contact Us</h3>
+        <div id="contact-box">
+            <form action="">
+                <div class="form-group">
+                    <label for="name">Name: </label>
+                    <input type="text" name="name" id="name" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email: </label>
+                    <input type="email" name="name" id="email" placeholder="e.g. xyz678@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number: </label>
+                    <input type="phone" name="name" id="phone" placeholder="e.g. 7263549879">
+                </div>
+            </form>    
+        </div>
+</section>
+<footer id="footer">
+    <p><b>Made by Prince Kala</b> </p>
+</footer>
+</body>
 </html>
